Add graph svg representation and QoL for creating graphs

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ecd0d0f9",
    "metadata": {},
    "outputs": [],
@@ -12,20 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0d0da6cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg baseProfile=\"full\" height=\"400px\" version=\"1.1\" viewBox=\"-20,-120,40,240\" width=\"400px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:ev=\"http://www.w3.org/2001/xml-events\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs /><line stroke=\"black\" x1=\"0px\" x2=\"0px\" y1=\"0px\" y2=\"-100px\" /><line stroke=\"black\" x1=\"0px\" x2=\"0px\" y1=\"0px\" y2=\"100px\" /><circle cx=\"0px\" cy=\"-100px\" r=\"2px\" /><circle cx=\"0px\" cy=\"100px\" r=\"2px\" /><rect fill=\"white\" height=\"30px\" stroke=\"black\" width=\"30px\" x=\"-15.0px\" y=\"-15.0px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"0px\" y=\"0px\">A</text></svg>"
+      ],
+      "text/plain": [
+       "Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attribs={}), [2]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attribs={}), [2]), 2: (Node(is_hyperedge=True, pos=array([0, 0]), label='A', attribs={}), [0, 1])})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "starting_graph = Graph({\n",
-    "    \n",
-    "})"
+    "  0: (Node.vertex(np.array([0, -1])), []),\n",
+    "  1: (Node.vertex(np.array([0,  1])), []),\n",
+    "  2: (Node.hyperedge(np.array([0, 0]), \"A\"), [0, 1])\n",
+    "})\n",
+    "starting_graph"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -39,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
