--- a/readme.ipynb
+++ b/readme.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecd0d0f9",
+   "id": "2d7d5c75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0d0da6cb",
+   "execution_count": 2,
+   "id": "6c1d6b7b",
    "metadata": {},
    "outputs": [
     {
@@ -25,16 +25,16 @@
        "Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attribs={}), [2]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attribs={}), [2]), 2: (Node(is_hyperedge=True, pos=array([0, 0]), label='A', attribs={}), [0, 1])})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "starting_graph = Graph({\n",
-    "  0: (Node.vertex(np.array([0, -1])), []),\n",
-    "  1: (Node.vertex(np.array([0,  1])), []),\n",
-    "  2: (Node.hyperedge(np.array([0, 0]), \"A\"), [0, 1])\n",
+    "  0: vertex((0, -1)),\n",
+    "  1: vertex((0,  1)),\n",
+    "  2: hyperedge((0, 0), \"A\", [0, 1])\n",
     "})\n",
     "starting_graph"
    ]
@@ -42,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -56,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
