Let any datatype be stored as attributes

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -11,19 +11,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bfac84eb",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "9ad6d467-665e-42ee-b8a2-9733ebb0e014",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"last_expr_or_assign\""
+    "# Graf\n",
+    "Hipergrafy są reprezentowane przez instancje klasy `Graph`. Składa się ona z węzłów (klasa `Node`), które odpowiadają wierzchołkom oraz hiperkrawędziom. Każdy węzeł ma poniższe właściwości:\n",
+    "- `pos` - Pozycja\n",
+    "- `label` - Etykieta\n",
+    "- `attrs` - Słownik zawierający atrybuty\n",
+    "- `is_hyperedge` - `True` jeżeli węzeł jest hiperkrawędzią, `False` w przeciwnym przypadku\n",
+    "\n",
+    "W grafie każdy węzeł posiada unikalny identyfikator liczbowy oraz listę węzłów, z którymi jest połączony.\n",
+    "\n",
+    "Przy tworzeniu grafu przydatne są poniższe funkcje:\n",
+    "\n",
+    "`vertex(pos: tuple[int, int], label: str = \"\", neighbours: Optional[list[int]] = None, attrs: Optional[dict[str, str]] = None\n",
+    ")`\n",
+    "`hyperedge(pos: tuple[int, int], label: str, neighbours: list[int], attrs: Optional[dict[str, str]] = None)`\n",
+    "\n",
+    "Poniżej podany jest przykład prostego grafu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3f8146c6",
    "metadata": {},
    "outputs": [
@@ -36,9 +50,8 @@
        "Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attrs={}), [2]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attrs={}), [2]), 2: (Node(is_hyperedge=True, pos=array([-0.1,  0. ]), label='A', attrs={'x': 0, 'y': 0}), [0, 1])})"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -46,12 +59,34 @@
     "  0: vertex((0, -1)),\n",
     "  1: vertex((0,  1)),\n",
     "  2: hyperedge((-0.1, 0), \"A\", [0, 1], attrs = { \"x\": 0, \"y\": 0 })\n",
-    "})"
+    "})\n",
+    "display(starting_graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d3a902d-64c6-409d-83fd-f292fa19aaf5",
+   "metadata": {},
+   "source": [
+    "Podawanie sąsiadów jest wymagane jedynie w przypadku hiperkrawędzi."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d75f652-b30e-420b-9e44-06e1938a1433",
+   "metadata": {},
+   "source": [
+    "# Produkcje\n",
+    "Produkcje są reprezentowane przez instancje klasy `Production`. Zawiera ona grafy lewej oraz prawej strony.\n",
+    "\n",
+    "Węzły z równymi identyfikatorami po lewej i po prawej stronie produkcji zachowują atrybuty oraz poprzednio istniejące połączenia z resztą grafu po zastosowaniu reguły.\n",
+    "\n",
+    "__Uwaga__, w przeciwieństwie do klasycznej definicji gramatyk hipergrafowych, gdzie transformacja ta dotyczy tylko wierzchołków zewnętrznych w tej bibliotece działa to również dla hiperkrawędzi."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "091e50d9",
    "metadata": {},
    "outputs": [
@@ -61,10 +96,10 @@
        "<svg baseProfile=\"full\" height=\"400px\" version=\"1.1\" viewBox=\"0,0,900,400\" width=\"900px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:ev=\"http://www.w3.org/2001/xml-events\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs /><svg height=\"400px\" viewBox=\"-50.0,-140,90.0,280\" width=\"400px\" x=\"0px\"><defs /><line stroke=\"black\" x1=\"-10.0px\" x2=\"0px\" y1=\"0.0px\" y2=\"-100px\" /><line stroke=\"black\" x1=\"-10.0px\" x2=\"0px\" y1=\"0.0px\" y2=\"100px\" /><circle cx=\"0px\" cy=\"-100px\" r=\"2px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"10px\" y=\"-90px\">0</text><circle cx=\"0px\" cy=\"100px\" r=\"2px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"10px\" y=\"110px\">1</text><rect fill=\"white\" height=\"30px\" stroke=\"black\" width=\"30px\" x=\"-25.0px\" y=\"-15.0px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"-10.0px\" y=\"0.0px\">A</text><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"15.0px\" y=\"25.0px\">2</text></svg><svg height=\"400px\" viewBox=\"-40,-140,280,280\" width=\"400px\" x=\"500px\"><defs /><line stroke=\"black\" x1=\"0px\" x2=\"0px\" y1=\"0px\" y2=\"-100px\" /><line stroke=\"black\" x1=\"0px\" x2=\"0px\" y1=\"0px\" y2=\"100px\" /><line stroke=\"black\" x1=\"100px\" x2=\"0px\" y1=\"-100px\" y2=\"-100px\" /><line stroke=\"black\" x1=\"100px\" x2=\"200px\" y1=\"-100px\" y2=\"-100px\" /><line stroke=\"black\" x1=\"100px\" x2=\"0px\" y1=\"100px\" y2=\"100px\" /><line stroke=\"black\" x1=\"100px\" x2=\"200px\" y1=\"100px\" y2=\"100px\" /><line stroke=\"black\" x1=\"190.0px\" x2=\"200px\" y1=\"0.0px\" y2=\"-100px\" /><line stroke=\"black\" x1=\"190.0px\" x2=\"200px\" y1=\"0.0px\" y2=\"100px\" /><circle cx=\"0px\" cy=\"-100px\" r=\"2px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"10px\" y=\"-90px\">0</text><circle cx=\"0px\" cy=\"100px\" r=\"2px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"10px\" y=\"110px\">1</text><rect fill=\"white\" height=\"30px\" stroke=\"black\" width=\"30px\" x=\"-15.0px\" y=\"-15.0px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"0px\" y=\"0px\">X</text><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"25.0px\" y=\"25.0px\">2</text><circle cx=\"200px\" cy=\"-100px\" r=\"2px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"210px\" y=\"-90px\">3</text><circle cx=\"200px\" cy=\"100px\" r=\"2px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"210px\" y=\"110px\">4</text><rect fill=\"white\" height=\"30px\" stroke=\"black\" width=\"30px\" x=\"85.0px\" y=\"-115.0px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"100px\" y=\"-100px\">B</text><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"125.0px\" y=\"-75.0px\">5</text><rect fill=\"white\" height=\"30px\" stroke=\"black\" width=\"30px\" x=\"85.0px\" y=\"85.0px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"100px\" y=\"100px\">B</text><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"125.0px\" y=\"125.0px\">6</text><rect fill=\"white\" height=\"30px\" stroke=\"black\" width=\"30px\" x=\"175.0px\" y=\"-15.0px\" /><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"190.0px\" y=\"0.0px\">A</text><text dominant-baseline=\"middle\" text-anchor=\"middle\" x=\"215.0px\" y=\"25.0px\">7</text></svg><line stroke=\"black\" x1=\"420px\" x2=\"480px\" y1=\"200px\" y2=\"200px\" /><line stroke=\"black\" x1=\"480px\" x2=\"460px\" y1=\"200px\" y2=\"210px\" /><line stroke=\"black\" x1=\"480px\" x2=\"460px\" y1=\"200px\" y2=\"190px\" /></svg>"
       ],
       "text/plain": [
-       "Production(left=Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attrs={}), [2]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attrs={}), [2]), 2: (Node(is_hyperedge=True, pos=array([-0.1,  0. ]), label='A', attrs={}), [0, 1])}), right=Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attrs={}), [2, 5]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attrs={}), [2, 6]), 2: (Node(is_hyperedge=True, pos=array([0, 0]), label='X', attrs={}), [0, 1]), 3: (Node(is_hyperedge=False, pos=array([ 2, -1]), label='', attrs={}), [5, 7]), 4: (Node(is_hyperedge=False, pos=array([2, 1]), label='', attrs={}), [6, 7]), 5: (Node(is_hyperedge=True, pos=array([ 1, -1]), label='B', attrs={}), [0, 3]), 6: (Node(is_hyperedge=True, pos=array([1, 1]), label='B', attrs={}), [1, 4]), 7: (Node(is_hyperedge=True, pos=array([1.9, 0. ]), label='A', attrs={}), [3, 4])}), seed_node=2, attributes=<function <lambda> at 0x000002995610D1B0>, predicate=<function <lambda> at 0x000002995610D120>)"
+       "Production(left=Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attrs={}), [2]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attrs={}), [2]), 2: (Node(is_hyperedge=True, pos=array([-0.1,  0. ]), label='A', attrs={}), [0, 1])}), right=Graph(nodes={0: (Node(is_hyperedge=False, pos=array([ 0, -1]), label='', attrs={}), [2, 5]), 1: (Node(is_hyperedge=False, pos=array([0, 1]), label='', attrs={}), [2, 6]), 2: (Node(is_hyperedge=True, pos=array([0, 0]), label='X', attrs={}), [0, 1]), 3: (Node(is_hyperedge=False, pos=array([ 2, -1]), label='', attrs={}), [5, 7]), 4: (Node(is_hyperedge=False, pos=array([2, 1]), label='', attrs={}), [6, 7]), 5: (Node(is_hyperedge=True, pos=array([ 1, -1]), label='B', attrs={}), [0, 3]), 6: (Node(is_hyperedge=True, pos=array([1, 1]), label='B', attrs={}), [1, 4]), 7: (Node(is_hyperedge=True, pos=array([1.9, 0. ]), label='A', attrs={}), [3, 4])}), seed_node=2, attributes=<function Production.<lambda> at 0x000002995610C430>, predicate=<function Production.<lambda> at 0x000002995610C550>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,14 +121,7 @@
     "        6: hyperedge((1,  1), \"B\", [1, 4]),\n",
     "        7: hyperedge((1.9,  0), \"A\", [3, 4]),\n",
     "    }),\n",
-    "    seed_node = 2,\n",
-    "    attributes = lambda nodes: {\n",
-    "        7: {\n",
-    "            \"x\": nodes[2].attrs[\"x\"] + 1,\n",
-    "            \"y\": nodes[2].attrs[\"y\"]\n",
-    "        }\n",
-    "    },\n",
-    "    predicate = lambda nodes: nodes[2].attrs[\"x\"] < 3\n",
+    "    seed_node = 2\n",
     ")"
    ]
   },
